# Metris

./: .gitignore  CMakeLists.txt  README.md
SANS/: CMakeLists.txt
SANS/LinearAlgebra/DenseLinAlg/StaticSize/: MatrixS.h  MatrixS_Add.h  MatrixS_MatMul_Native.h  MatrixS_Mul.h  VectorS.h  VectorS_Mul.h
SANS/LinearAlgebra/DenseLinAlg/StaticSize/Eigen/: MatrixSymS_Eigen_1x1.cpp  MatrixSymS_Eigen_2x2.cpp  MatrixSymS_Eigen_3x3.cpp  MatrixSymS_Eigen_4x4.cpp
SANS/LinearAlgebra/DenseLinAlg/StaticSize/MatMul/: MatrixS_MatMul_Native_Real_Instantiate.cpp
SANS/LinearAlgebra/DenseLinAlg/tools/: .PromoteSurreal.CXX20.h  Identity.h  Matrix_Util.h  PromoteSurreal.h
SANS/Surreal/: .PromoteSurreal.CXX20.h  PromoteSurreal.h  SurrealS.h  SurrealS_Lazy.h  SurrealS_Type.h  SurrealS_fwd.h  promoteSurreal.backup.h
SANS/tools/: AlignMem.h  BackTraceException.cpp  SANSException.cpp  SANSException.h  SANSTraitsPOD.h  SANSTraitsScalar.h  SANSnumerics.h  minmax.h
cmake/: Dependencies.cmake  FindCLP.cmake  MetrisFlags.cmake
examples/adapt_square/: square.egads  square.meshb
libs/: CMakeLists.txt  libmeshb.hxx  libmeshb7.c  lplib3.c  lplib3.h
libs/nlopt/src/algs/luksan/: luksan.h  pnet.c
progs/: EGADS2lite.cxx  main.cxx  scatter_rh.cxx
src/: CMakeLists.txt  CT_loop.hxx  Metris.h  SurrealS_inc.hxx  aux_EGADSprinterr.cxx  aux_EGADSprinterr.hxx  aux_exceptions.hxx  aux_hashtab.cxx  aux_hashtab.hxx  aux_histogram.cxx  aux_histogram.hxx  aux_pp_inc.hxx  aux_timer.cxx  aux_timer.hxx  aux_topo.cxx  aux_topo.hxx  aux_utils.cxx  aux_utils.hxx  codegen_ccoef.hxx  codegen_ccoef2.02.cxx  codegen_ccoef2.02_d.cxx  codegen_ccoef2.02_d_pt.cxx  codegen_ccoef3.02.cxx  codegen_ccoef3.02_d.cxx  codegen_ccoef_d.hxx  codegen_lag2bez.cxx  codegen_lag2bez.hxx  codegen_lagrange.hxx  common_includes.hxx  ho_constants.hxx  ho_quadrature.hxx  inc_hana.hxx  io_libmeshb.cxx  io_libmeshb.hxx  low_ccoef.cxx  low_ccoef.hxx  low_ccoef_d.cxx  low_ccoef_d.hxx  low_eval.cxx  low_eval.hxx  (+40 more)
src/API/: MetrisAPI.cxx  MetrisAPI.hxx
src/Arrays/: aux_msharrays.hxx  aux_msharrays1D.cxx  aux_msharrays2D.cxx
src/BezierOffsets/: low_gaps.cxx  low_gaps.hxx  low_gaps_3D.cxx  msh_bez2gaps.cxx  msh_bez2gaps.hxx  msh_curve_offsets.cxx  msh_curve_offsets.hxx
src/Boundary/: low_geosurf.cxx  low_geosurf.hxx  low_projsurf.cxx  low_projsurf.hxx  msh_inisurf.cxx  msh_inisurf.hxx  msh_optsurf.cxx
src/LPopt/: LPsolver.cxx  LPsolver.hxx  msh_bezgapLP.cxx  msh_maxccoef.cxx  msh_maxccoef.hxx  msh_maxmetLP.cxx
src/Localization/: low_localization.cxx  low_localization.hxx  msh_localization.cxx  msh_localization.hxx  msh_localization.ixx
src/Mesh/: CADInfo.cxx  CADInfo.hxx  Mesh.cxx  Mesh.hxx  MeshBack.cxx  MeshBack.hxx  MeshBase.cxx  MeshBase.hxx  MeshBase_init.cxx  MeshBase_topo.cxx  MeshFwd.hxx  MeshMetric.cxx  MeshMetric.hxx  Mesh_cleanup.cxx
src/MetricField/: MetricField.hxx  MetricFieldAnalytical.cxx  MetricFieldFE.cxx  MetricFieldFE.ixx  MetricField_getMetNodes.cxx  MetricField_getMetNodes.ixx  msh_checkmet.cxx  msh_checkmet.hxx  msh_explogmet.cxx  msh_explogmet.hxx
src/MetrisRunner/: MetrisParameters.cxx  MetrisParameters.hxx  MetrisRunner.cxx  MetrisRunner.hxx  MetrisRunner_curveMesh.cxx  MetrisRunner_iniMetris.cxx  msh_adaptMesh.cxx  msh_optimMesh.cxx  statMesh.cxx
src/adapt/: low_collapse.cxx  low_collapse.hxx  low_delaunay.cxx  low_delaunay.hxx  low_increasecav.cxx  low_increasecav.hxx  low_insert2D.cxx  low_insert2D.hxx  low_swap2D.cxx  low_swap2D.hxx  msh_collapse.cxx  msh_collapse.hxx  msh_insert2D.cxx  msh_insert2D.hxx  msh_lineadapt.cxx  msh_lineadapt.hxx  msh_lineforce.cxx  msh_lineforce.hxx  msh_reinsert_flat.cxx  msh_reinsert_flat.hxx  msh_swap2D.cxx  msh_swap2D.hxx
src/cavity/: check_cavity_topo.cxx  correct_cavity_fast.cxx  msh_cavity.cxx  msh_cavity.hxx  reconnect_faccav.cxx  reconnect_lincav.cxx  update_cavity.cxx
src/linalg/: det.hxx  dsyevq.cxx  dsyevq.hxx  dsytrd.cxx  dsytrd.hxx  eigen.cxx  eigen.hxx  explogmet.cxx  explogmet.hxx  invmat.cxx  invmat.hxx  matprods.cxx  matprods.hxx  sym3idx.hxx  symidx.hxx  utils.cxx  utils.hxx
src/quality/: low_metqua.cxx  low_metqua.hxx  low_metqua.txx  low_metqua_d.cxx  low_metqua_d.hxx  low_metqua_d.txx  low_surfqua.cxx  msh_metqua.cxx  msh_metqua.hxx  quafun.cxx  quafun.hxx  quafun_distortion.cxx  quafun_distortion.hxx  quafun_tradet.cxx  quafun_tradet.hxx  quafun_unit.cxx  quafun_unit.hxx  quafun_xi.hxx
src/smoothing/: low_smooballNewton.cxx  low_smooballNewton.hxx  low_smooballdiff.cxx  low_smooballdiff.hxx  msh_smooball.cxx  msh_smooball.hxx
tools/: gen_ccoef.cxx  gen_ccoef.hxx  gen_ccoef_d.cxx  gen_lag2bezfuncs.cxx  gen_lageval.cxx
